--- a/app/templates/configure/item.html
+++ b/app/templates/configure/item.html
@@ -8,6 +8,8 @@
     They could even be people if they don't need to perform any actions.
     For more ideas on how items can be used, browse the pre-built scenarios.
     </p>
+    <p>Incidentally, progress could be determined in a pen and paper game from a clock,
+    by writing the start and stop time of an action and computing elapsed progress.</p>
     <form method="post">
         <label for="item-name">Name:</label>
         <input type="text" id="item-name" name="item_name" value="{{ current.name }}" required>
@@ -113,7 +115,7 @@
 
             function addRecipe(rate_amount = 1, rate_duration = 1.0, instant = false) {
                 recipeCounter++;
-                console.log("addRecipe() " + recipeCounter);
+                console.log(`addRecipe() ${recipeCounter}`);
                 const sourceHtml = `
                     <div class="recipe-container">
                         <input type="hidden" name="recipe_id" value="${recipeCounter}">
@@ -125,7 +127,7 @@
                             <span>seconds</span>
                         </span>
                         <input type="checkbox" id="instant" name="recipe_${recipeCounter}_instant"
-                            {% if instant %}checked{% endif %} onChange="updateInstantVisibility(this);">
+                            ${instant ? 'checked' : ''} onChange="updateInstantVisibility(this);">
                         <label for="instant">Instant</label>
                         <button class="remove-recipe-btn lesser-button">Remove Recipe</button>
                         <!-- Placeholder for appending new sources -->
@@ -135,6 +137,8 @@
                 `;
                 $('#recipelist_end').before(sourceHtml);
                 toggleAddRecipeButtonVisibility();
+                const newCheckbox = $(`#instant[name="recipe_${recipeCounter}_instant"]`)[0];
+                $(newCheckbox).trigger('change');
             }
 
             function addSource(recipeId, sourceId, sourceName, sourceQuantity = 1) {
@@ -148,7 +152,7 @@
                     <div class="source flexdiv" data-source-id="${sourceId}" data-recipe-id="${recipeId}">
                         <input type="hidden" name="recipe_${recipeId}_source_id" value="${sourceId}">
                         <label>Takes:</label>
-                        <input type="number" id="recipe-${recipeId}-source-${sourceId}-quantity" name="recipe_${recipeId}_source_${sourceId}_quantity" value="{{ sourceQuantity }}">
+                        <input type="number" id="recipe-${recipeId}-source-${sourceId}-quantity" name="recipe_${recipeId}_source_${sourceId}_quantity" value="${sourceQuantity}">
                         ${sourceName}
                         <button class="remove-source-btn lesser-button">Remove Source</button>
                     </div>
@@ -169,7 +173,7 @@
                 const recipeContainer = $(this).closest('.recipe-container');
                 if (recipeContainer.length) {
                     const existingSource = recipeContainer.find(
-                        '.source[data-source-id="' + sourceId + '"]');
+                        `.source[data-source-id="${sourceId}"]`);
                     if (existingSource.length > 0) {
                         alert('Source already exists.');
                         return;
@@ -184,9 +188,8 @@
                 toggleAddRecipeButtonVisibility();
             });
 
-            console.log("number of recipes=" + {{ current.recipes | length }});
+            console.log("number of recipes={{ current.recipes | length }}");
             {% for recipe in current.recipes %}
-                console.log("rate_amount='" + {{ recipe.rate_amount }} + "'");
                 addRecipe(
                     {{ recipe.rate_amount }},
                     {{ recipe.rate_duration }},
@@ -241,7 +244,7 @@
                 if (attribId == "") {
                     return; // don't add if the selected option is the placeholder
                 }
-                const existingAttrib = $('.attrib[data-attrib-id="' + attribId + '"]');
+                const existingAttrib = $(`.attrib[data-attrib-id="${attribId}"]`);
                 if (existingAttrib.length > 0) {
                     alert('Attribute already exists.');
                     return;
