--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,6 +1,17 @@
 body {
     background-color: #1f1f1f;
     color: #ffffff;
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    text-align: center;
+}
+
+.info {
+    /* font-family: initial; */
+    /* font-size: 90%; */
+    font-family: Times, "Times New Roman", serif;
 }
 
 .flexdiv {
@@ -22,7 +33,6 @@ body {
 
 .nav-container > a {
     margin-left: 10px;
-    color: #ffffff;
 }
 
 .upper-right {
@@ -37,7 +47,6 @@ body {
 
 .upper-right > a {
     margin-left: 10px;
-    color: #ffffff;
 }
 
 .dropdown-container {
@@ -48,7 +57,6 @@ body {
     display: none;
     position: absolute;
     background-color: #4d2b1e;
-    color: #ffffff;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     left: -5rem;
@@ -69,15 +77,19 @@ body {
 }
 
 .username {
-    color: #0000ff;
+    color: yellow;
+    font-weight: bold;
 }
 
 a {
-    color: #dddddd;
+    color: #428bca; /* Lighter blue color */
+    text-decoration: none;
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Add a subtle text shadow */
 }
 
 a:hover {
-    color: #ffffff;
+    color: #2a6496; /* Slightly darker blue on hover */
 }
 
 .select-box {
@@ -85,13 +97,11 @@ a:hover {
     margin-right: 10px;
 }
 
-h1 {
-    color: #ffffff;
-    text-align: center;
-}
-
 label {
-    color: #ffffff;
+    color: #999999;
+}
+.label-like {
+    color: #999999;
 }
 
 input[type="text"],
@@ -124,6 +134,8 @@ button {
     margin-left: 5px;
     padding: 5px 10px;
     cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
 }
 button:hover {
     background-color: #0000dd;
@@ -142,7 +154,7 @@ button:hover {
 }
 
 .lesser-button {
-    background-color: #252525;
+    background-color: #333333;
     color: #ffffff;
     border: none;
     padding: 5px 10px;
@@ -176,12 +188,14 @@ button:disabled:hover {
 
 table {
     background-color: #252525;
-    color: #ffffff;
     border-collapse: collapse;
     margin-bottom: 20px;
 }
 
-table th,
+table th {
+    color: #999999;
+    padding: 10px;
+}
 table td {
     padding: 10px;
 }
