--- a/app/templates/configure/item.html
+++ b/app/templates/configure/item.html
@@ -44,18 +44,9 @@
             <button type="button" id="add-recipe-btn" class="lesser-button" {% if current.recipes | length == 0 %}style="display: none;"{% endif %}>Add Alternative Recipe</button>
         </div>
 
-        <div class="attrib-container" style="border: 1px solid #ccc; padding: 10px;">
-            {% for attrib, attrib_val in current.attribs.items() %}
-                <div class="attrib flexdiv" data-attrib-id="{{ attrib.id }}">
-                    <input type="hidden" name="attrib_id" value="{{ attrib.id }}">
-                    {{ attrib.name }}
-                    <input type="number" id="attrib-{{ attrib.id }}-val" name="attrib_{{ attrib.id }}_val" value="{{ attrib_val }}">
-                    <button class="remove-attrib-btn lesser-button">Remove Attribute</button>
-                </div>
-            {% endfor %}
-
+        <div class="attrib-container outer-border">
             <!-- Placeholder for appending new attribs -->
-            <div id="attriblist_end" style="unobtrustive"></div>
+            <div id="attriblist_end" style="unobtrusive"></div>
             {% if game_data.attribs %}
                 <!-- Select box for adding another attrib -->
                 <div class="select-box">
@@ -146,7 +137,7 @@
                         <label>Takes:</label>
                         <input type="number" id="recipe-${recipeId}-source-${sourceId}-quantity" name="recipe_${recipeId}_source_${sourceId}_quantity" value="${sourceQuantity}">
                         ${sourceName}
-                        <button class="remove-source-btn lesser-button">Remove Source</button>
+                        <button class="remove-source-btn lesser-button">Remove</button>
                     </div>
                 `;
                 recipeContainer.find('.sourcelist_end').before(sourceHtml);
@@ -229,6 +220,17 @@
                 addRecipe();
             });
 
+            function addAttrib(attribId, attribName, attribVal = 1) {
+                const attribHtml = `
+                    <div class="attrib flexdiv" data-attrib-id="${attribId}">
+                        <input type="hidden" name="attrib_id" value="${attribId}">
+                        ${attribName}
+                        <input type="number" id="attrib-${attribId}-val" name="attrib_${attribId}_val" value="${attribVal}">
+                        <button class="remove-attrib-btn lesser-button">Remove</button>
+                    </div>
+                `;
+                $('#attriblist_end').before(attribHtml);
+            }
             $('#add-attrib-btn').click(function() {
                 const selectedOption = $('#add-attrib-select option:selected');
                 const attribId = selectedOption.val();
@@ -241,23 +243,18 @@
                     alert('Attribute already exists.');
                     return;
                 }
-                // Create HTML elements for the attrib
-                const attribHtml = `
-                    <div class="attrib flexdiv" data-attrib-id="${attribId}">
-                        <input type="hidden" name="attrib_id" value="${attribId}">
-                        ${attribName}
-                        <input type="number" id="attrib-${attribId}-val" name="attrib_${attribId}_val" value="1">
-                        <button class="remove-attrib-btn lesser-button">Remove Attribute</button>
-                    </div>
-                `;
-                $('#attriblist_end').before(attribHtml);
+                addAttrib(attribId, attribName);
             });
+            console.log("number of attribs={{ current.attribs.keys() | length }}");
+            {% for attrib, attrib_val in current.attribs.items() %}
+                addAttrib(
+                    {{ attrib.id }},
+                    "{{ attrib.name }}",
+                    "{{ attrib_val }}");
+            {% endfor %}
 
             $('#attrib-container').on('click', '.remove-attrib-btn', function() {
                 const attribContainer = $(this).closest('.attrib');
-                const attribId = attribContainer.data('attrib-id');
-
-                // Remove the attrib from the DOM
                 attribContainer.remove();
             });
         });
