--- a/app/templates/configure/item.html
+++ b/app/templates/configure/item.html
@@ -124,7 +124,8 @@
                 $(newCheckbox).trigger('change');
             }
 
-            function addSource(recipeId, sourceId, sourceName, sourceQuantity = 1) {
+            function addSource(recipeId, sourceId, sourceName,
+                    sourceQuantity = 1, preserve = false) {
                 const recipeContainer = $('.recipe-container').last();
                 const existingSource = recipeContainer.find(`.source[data-source-id="${sourceId}"]`);
                 if (existingSource.length > 0) {
@@ -137,6 +138,9 @@
                         <label>Takes:</label>
                         <input type="number" id="recipe-${recipeId}-source-${sourceId}-quantity" name="recipe_${recipeId}_source_${sourceId}_quantity" value="${sourceQuantity}">
                         ${sourceName}
+                        <input type="checkbox" id="preserve" name="recipe_${recipeCounter}_preserve"
+                            ${preserve ? 'checked' : ''}>
+                        <label for="preserve">Preserve</label>
                         <button class="remove-source-btn lesser-button">Remove</button>
                     </div>
                 `;
@@ -177,11 +181,12 @@
                     {{ recipe.rate_amount }},
                     {{ recipe.rate_duration }},
                     {{ recipe.instant | lower }});
-                {% for source_item, source_qty in recipe.sources.items() %}
+                {% for source in recipe.sources %}
                     addSource(recipeCounter,
-                    {{ source_item.id }},
-                    "{{ source_item.name }}",
-                    "{{ source_qty}}");
+                    {{ source.item.id }},
+                    "{{ source.item.name }}",
+                    "{{ source.quantity}}",
+                    {{ source.preserve | lower }});
                 {% endfor %}
             {% endfor %}
 
